[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tradelocker"
version = "0.40.0"
description = "TradeLocker Trading API support for Python"
authors = ["TradeLocker <admin@tradelocker.com>"]
license = "MIT"
readme = "README.md"
keywords=["tradelocker","api", "rest", "trading", "exchange", "algotrading", "algo", "bots", "strategies"]
urls.Source = "https://github.com/tradelocker/tradelocker-python/"
urls.Issues = "https://github.com/tradelocker/tradelocker-python/issues"


[tool.poetry.dependencies]
python = ">=3.11"

pandas = "2.1.1"
PyJWT = "2.8.0"
Requests = "2.31.0"
# typeguard is removed as being a dependency that is installed by since it causes problems with pyinstaller and nuitka -- add it manually if you prefer to use it.
# typeguard = "4.1.5"
colorlog = "6.6.0"
python-dotenv = "1.0.0"

[tool.poetry.dev-dependencies]
pytest = "7.4.2"
pytest-cov = "4.1.0"
mypy = "1.5.1"
mypy-extensions = "1.0.0"
types-requests = "2.31.0"
pandas-stubs = "2.0.3.*"
pylint = "2.17.7"
poethepoet = "0.24.2"
black = "23.9.1"


[tool.poe.tasks]
test = "poetry run pytest -v --cov=tradelocker --cov-report term-missing"
test_typing = "poetry run mypy src/tradelocker --strict"
test_pylint = "poetry run pylint tradelocker"
test_all = ["test", "test_typing", "test_pylint"]

[tool.poetry_bumpversion.file."src/tradelocker/__about__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
